Add CI workflow, backup scripts and new service stubs

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,13 @@ GOOGLE_REFRESH_TOKEN=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_WHATSAPP_FROM=
+
+
+# Integração Outlook
+OUTLOOK_CLIENT_ID=
+OUTLOOK_CLIENT_SECRET=
+OUTLOOK_TENANT_ID=
+
+# Integração iCal
+ICAL_URL=
+
