--- a/.env.production.example
+++ b/.env.production.example
@@ -41,3 +41,11 @@ GOOGLE_REFRESH_TOKEN=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_WHATSAPP_FROM=
+
+
+OUTLOOK_CLIENT_ID=
+OUTLOOK_CLIENT_SECRET=
+OUTLOOK_TENANT_ID=
+
+ICAL_URL=
+
